--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="style/style.css">
     <link rel="stylesheet" href="style/mobile.css">
     <link rel="stylesheet" href="style/tablet.css">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -50,5 +50,105 @@
         </div>
         </div>
     </header>
+
+    <main>
+        <section>
+            <div class="collection mt-25">
+                <div class="collection-txt text-center text-3xl font-semibold mb-8">Popular Collection</div>
+                <div class="cards grid grid-cols-3 gap-4">
+                    <div class="card">
+                        <img src="images/action.png" alt="">
+                        <h1>Flex Tripod</h1>
+                        <h4 class="price">$50.48</h4>
+                        <div class="review flex">
+                            <img src="images/Five-Star-Rating-SVG.svg" alt="" class="review">
+                            <h6>4.9</h6>
+                        </div>
+                        <p>Wordwide shifting <br> available <br> Buyers protection possible!</p>
+                    </div>
+                    <div class="card">
+                        <img src="images/mic.png" alt="">
+                        <h1>Microphone</h1>
+                        <h4 class="price">$102.25</h4>
+                        <div class="review flex ">
+                            <img src="images/Five-Star-Rating-SVG.svg" alt="" class="review">
+                            <h6>4.9</h6>
+                        </div>
+                        <p>Wordwide shifting <br> available <br> Buyers protection possible!</p>
+                    </div>
+                    <div class="card">
+                        <img src="images/airpod.png" alt="">
+                        <h1>Airbuds</h1>
+                        <h4 class="price">$100.00</h4>
+                        <div class="review flex">
+                            <img src="images/Five-Star-Rating-SVG.svg" alt="" class="review">
+                            <h6>4.9</h6>
+                        </div>
+                        <p>Wordwide shifting <br> available <br> Buyers protection possible!</p>
+                    </div>
+                    <div class="card">
+                        <img src="images/drone.png" alt="">
+                        <h1>Drone</h1>
+                        <h4 class="price">$980.25</h4>
+                        <div class="review flex">
+                            <img src="images/Five-Star-Rating-SVG.svg" alt="" class="review">
+                            <h6>4.9</h6>
+                        </div>
+                        <p>Wordwide shifting <br> available <br> Buyers protection possible!</p>
+                    </div>
+                    <div class="card">
+                        <img src="images/lights.png" alt="">
+                        <h1>Light Setip</h1>
+                        <h4 class="price">$1200.00</h4>
+                        <div class="review flex">
+                            <img src="images/Five-Star-Rating-SVG.svg" alt="" class="review">
+                            <h6>4.9</h6>
+                        </div>
+                        <p>Wordwide shifting <br> available <br> Buyers protection possible!</p>
+                    </div>
+                    <div class="card">
+                        <img src="images/setup.png" alt="">
+                        <h1>Photoshoot set</h1>
+                        <h4 class="price">$820.40</h4>
+                        <div class="review flex">
+                            <img src="images/Five-Star-Rating-SVG.svg" alt="" class="review">
+                            <h6>4.9</h6>
+                        </div>
+                        <p>Wordwide shifting <br> available <br> Buyers protection possible!</p>
+                    </div>
+                    <div class="card">
+                        <img src="images/camera.png" alt="">
+                        <h1>Vlogging Camera</h1>
+                        <h4 class="price">$1800.80</h4>
+                        <div class="review flex">
+                            <img src="images/Five-Star-Rating-SVG.svg" alt="" class="review">
+                            <h6>4.9</h6>
+                        </div>
+                        <p>Wordwide shifting <br> available <br> Buyers protection possible!</p>
+                    </div>
+                    <div class="card">
+                        <img src="images/single-light.png" alt="">
+                        <h1>Green Screen</h1>
+                        <h4 class="price">$25.48</h4>
+                        <div class="review flex">
+                            <img src="images/Five-Star-Rating-SVG.svg" alt="" class="review">
+                            <h6>4.9</h6>
+                        </div>
+                        <p>Wordwide shifting <br> available <br> Buyers protection possible!</p>
+                    </div>
+                    <div class="card">
+                        <img src="images/action.png" alt="">
+                        <h1>Action Camera</h1>
+                        <h4 class="price">$380.25</h4>
+                        <div class="review flex">
+                            <img src="images/Five-Star-Rating-SVG.svg" alt="" class="review">
+                            <h6>4.9</h6>
+                        </div>
+                        <p class="texr-g">Wordwide shifting <br> available <br> Buyers protection possible!</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
 </body>
 </html>
