--- a/index.html
+++ b/index.html
@@ -149,6 +149,19 @@
                 </div>
             </div>
         </section>
+
+        <section>
+            <div class="feture flex gap-20 mt-25">
+                <div class="image-sec">
+                    <img  src="images/unsplash_J8Cfm4W8gd8.png" alt="">
+                </div>
+                <div class="flex flex-col">
+                    <h1 class="text-3xl font-semibold">Featured products at one place</h1>
+                    <p class="mt-4 mb-4">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
+                    <div><button class="btn block"><a href="">Join Now <i class="fa-solid fa-arrow-right-long"></i></a></button></div>
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 </html>
