--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 </head>
 <body>
     <header>
-        <nav>
-            <div class="header flex justify-between ">
+        <nav class="">
+            <div class="header flex justify-between">
                 <div class="logo text-2xl font-bold">
                     <h1>Influencer products</h1>
                 </div>
@@ -158,10 +158,24 @@
                 <div class="flex flex-col">
                     <h1 class="text-3xl font-semibold">Featured products at one place</h1>
                     <p class="mt-4 mb-4">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
-                    <div><button class="btn block"><a href="">Join Now <i class="fa-solid fa-arrow-right-long"></i></a></button></div>
+                    <div class="flex justify-center"><button class="btn block"><a href="">Join Now <i class="fa-solid fa-arrow-right-long"></i></a></button></div>
                 </div>
             </div>
         </section>
+
+        <footer class="flex flex-col text-center text-white">
+            <div class="m-15">
+                <h1 class="text-2xl font-bold">Influencer products</h1>
+                <p class="m-1">Copyright © 2020 influencer products</p>
+                <p>All rights reserved</p>
+                <div class="icons mt-3 gap-5">
+                    <i class="fa-brands fa-linkedin"></i>
+                    <i class="fa-brands fa-facebook"></i>
+                    <i class="fa-brands fa-x-twitter"></i>
+                    <i class="fa-brands fa-whatsapp"></i>
+                </div>
+            </div>
+        </footer>
     </main>
 </body>
 </html>
